syntax = "proto3";

option java_multiple_files = true;
option java_package = "cool.scx.live_room_watcher.impl.douyin_hack.proto_entity.webcast.im";

// 更新时间 : 2024-07-03
message PushHeader {
    string key = 1;
    string value = 2;
}
